added about page link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,5 +19,5 @@
       %div.collapse.navbar-collapse{ id: 'main-nav-collapse' }
         %ul.nav.navbar-nav.navbar-right
           %li
-            = link_to 'About', '#'
+            = link_to 'About', about_path
     = yield
