added bootstrap classes for app layout

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,2 +1,5 @@
-%h2
-  Home
+%div.jumbotron.text-center 
+  %h1
+    Welcome to Dev Match
+  %h3
+    A membership site where entrepenuers can meet developers.
