--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,4 +20,5 @@
         %ul.nav.navbar-nav.navbar-right
           %li
             = link_to 'About', about_path
-    = yield
+    %div.container        
+      = yield
