--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-  %nav.navbar.navbar-default.navbar-static-top{role: 'navigation'}
+  %nav.navbar.navbar-inverse.navbar-static-top{role: 'navigation'}
     %div.container
       %div.navbar-header
         %button{type: 'button', class: 'navbar-toggle', 'data-toggle': 'collapse', 'data-target': '#main-nav-collapse'}
