--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,5 +23,7 @@
           %ul.nav.navbar-nav.navbar-right
             %li
               = link_to 'About', about_path
+            %li
+              = link_to 'Contact Us', new_contact_path
     %div.container        
       = yield
