--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -2,14 +2,14 @@
   %div.col-md-4.col-md-offset-4
     %div.well
       = form_for @contact do |f| 
-        %div.form_group      
+        %div.form-group      
           = f.label :name
           = f.text_field :name, class: 'form-control'
-        %div.form_group  
+        %div.form-group  
           = f.label :email
           = f.text_field :email, class: 'form-control'    
-        %div.form_group      
+        %div.form-group      
           = f.label :comments
           = f.text_area :comments, class: 'form-control'
-       
-        = f.submit 'Submit', class: 'btn btn-default'
+        %div.form-group
+          = f.submit 'Submit', class: 'btn btn-default'
