added precompiled assets

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,8 +17,8 @@
             %span{class: 'icon-bar'}
           
         = link_to root_path, class: 'navbar-brand' do
-          %i.fa.fa-users.navbar-brand.pull-left
-            Dev Match
+          %i.fa.fa-users.navbar-brand.pull-left.no-padding-top
+          Dev Match
         %div.collapse.navbar-collapse{ id: 'main-nav-collapse' }
           %ul.nav.navbar-nav.navbar-right.pull-right
             %li
