--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,4 +2,4 @@
   %h1
     Welcome to Dev Match
   %h3
-    A membership site where entrepenuers can meet developers.
+    A membership site where entrepenuers can meet developers
