--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     %nav.navbar.navbar-inverse.navbar-static-top{role: 'navigation'}
       %div.container
         %div.navbar-header
-          %button{type: 'button', class: 'navbar-toggle', 'data-toggle': 'collapse', 'data-target': '#main-nav-collapse'}
+          %button{:type => 'button', :class => 'navbar-toggle', 'data-toggle' => 'collapse', 'data-target' => '#main-nav-collapse'}
             %span{class: 'sr-only'}
               Toggle Navigation
             %span{class: 'icon-bar'}
