--- a/app/views/contact_mailer/contact_email.html.haml
+++ b/app/views/contact_mailer/contact_email.html.haml
@@ -3,6 +3,7 @@
   %head
   
   %body
-    %p You have received and email from the site's contact form, from #{@name}, #{@email}
-    %p = @body
+    %p You have received and email from the site's Contact Us form.  The message is from #{@name} at #{@email}
+    %p 
+      = @body
  
