modified the contact email template

--- a/app/views/contact_mailer/contact_email.html.haml
+++ b/app/views/contact_mailer/contact_email.html.haml
@@ -3,7 +3,8 @@
   %head
   
   %body
-    %p You have received and email from the site's Contact Us form.  The message is from #{@name} at #{@email}
-    %p 
-      = @body
+    %p You have received and email from the site's Contact Us form.  
+    %p The message is from: #{@name}
+    %p Using email address: #{@email}
+    %p message: #{@body}
  
