--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,16 @@
 .row
-  %div.col-md-4.col-md-offset-4
+  .col-md-6.col-md-offset-3
+    - if params[:plan] == '2'
+      %h1.text-center Pro Account
+      %p.text-center  Sign up for the pro account for $10/month and get access to the community and contact information!
+    - else
+      %h1.text-center Basic Account
+      %p.text-center Sign up for free and get basic access to the community.
+  %div.col-md-6.col-md-offset-3
     .well
-      %h2 Sign up
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = devise_error_messages!
-        %div.field.form-group
-          = f.label :email
-          = f.email_field :email, autofocus: true, class: 'form-control'
-        %div.field.form-group
-          = f.label :password
-          - if @minimum_password_length
-            %em
-              (#{@minimum_password_length} characters minimum)
-          = f.password_field :password, autocomplete: "off", class: 'form-control'
-        %div.field.form-group
-          = f.label :password_confirmation
-          = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
-        .actions.form-group
-          = f.submit "Sign up", class: 'btn btn-success'
+      - if params[:plan] == '2'
+        = render "pro_form"
+      - else
+        = render "basic_form"
+    
       = render "devise/shared/links"
